# atlas

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  .repomixignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_new.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SKILL.md  TODO.md  atlas-super-prompt.md  atlas.config.example.ts  atlas.config.ts  docker-compose.yml  main.py  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  repomix-output.md  repomix.config.json  system_prompt.md  test_atlas.py  tsconfig.json  v5-compiled.qntm  v5-complete.qntm
.claude/: settings.local.json
.claude-plugin/: marketplace.json
atlas/: README.md  __init__.py  agent.py  ingest.py  query.py
atlas/agents/: __init__.py  base.py  controller.py  multi_provider_base.py  registry.py  worker.py
atlas/cli/: __init__.py  config.py  parser.py
atlas/core/: __init__.py  config.py  config.py.new  env.py  errors.py  logging.py  prompts.py  retry.py  telemetry.py  types.py
atlas/graph/: __init__.py  edges.py  nodes.py  state.py  workflows.py
atlas/knowledge/: __init__.py  chunking.py  embedding.py  hybrid_search.py  ingest.py  retrieval.py  settings.py
atlas/models/: __init__.py  anthropic.py  base.py  factory.py  mock.py  ollama.py  openai.py
atlas/orchestration/: coordinator.py  parallel.py  scheduler.py
atlas/providers/: __init__.py  anthropic.py  base.py  capabilities.py  errors.py  factory.py  group.py  messages.py  mock.py  model_validator.py  ollama.py  openai.py  options.py  registry.py  reliability.py  resolver.py  validation.py  validation_README.md  validation_utils.py  validators.py
atlas/schemas/: __init__.py  agents.py  base.py  config.py  knowledge.py  messages.py  options.py  providers.py  streaming.py  tools.py  types.py  (+1 more)
atlas_legacy/: agent.py
docs/: CHROMADB_VIEWER.md  DAILY_PRACTICES_AND_SUSTAINABLE_GROWTH.md  ENV_VARIABLES.md  ESSENTIAL_PAPERS_RESEARCH_GUIDE.md  MODELS.md  MODEL_PROVIDERS.md  MVP_STRATEGY.md  TESTING.md  TODO.md  TYPE_CHECKING.md  UNDERSTANDING_SPACE.md  api.md  architecture.md  bibliography.md  fix-links.txt  fix-md-extensions.sh  fix-mermaid-styling.sh  index.md  ollama-tiers.md  package.json  pnpm-lock.yaml  research_report.md  the_observer_problem.md  user-review-messages.md  user-review.md  wetwareOS.md
examples/: 01_query_simple.py  02_query_streaming.py  03_provider_selection.py  04_provider_group.py  05_agent_options_verification.py  05_task_aware_providers.py  06_task_aware_providers.py  07_task_aware_agent.py  08_multi_agent_providers.py  10_document_ingestion.py  11_basic_retrieval.py  12_hybrid_retrieval.py  12_hybrid_retrieval.py.todo  15_advanced_filtering.py  16_schema_validation.py  17_provider_validation.py  20_tool_agent.py  20_tool_agent.py.todo  21_multi_agent.py.todo  22_agent_workflows.py.todo  22_event_middleware.py  26_knowledge_events.py  EXAMPLES.md  README.md  common.py  complex_serialization_test.py  fix_message_serialization.py  hybrid_retrieval_example.py  ingest_example.py  query_example.py  retrieval_example.py  retry_example.py  robust_retry_example.py  streaming_example.py  telemetry_example.py  test_model_message.py  tool_agent_example.py  verify_document_ids.py
prev/: WRITING_COMMIT_MESSAGES.md  WRITING_GUIDES.md  atlas.exe.txt  atlas.history.txt  atlas.super.src.md
prev/python-2/: .gitignore  pyproject.toml
prev/v0/: .repomixignore  CONTRIBUTING.md  Modelfile  NOTICE  README.md  mypy.ini  pyproject.toml
prev/v0/atlas/: query.py
prev/v0/atlas/core/: env.py  telemetry.py  types.py
prev/v0/atlas/examples/: 08_multi_agent_providers.py  EXAMPLES.md  common.py
prev/v0/atlas/graph/: __init__.py  state.py
prev/v0/atlas/knowledge/: chunking.py  embedding.py  ingest.py  retrieval.py  settings.py
prev/v0/atlas/orchestration/: scheduler.py
prev/v0/atlas/providers/: __init__.py  commands.py  factory.py  model_validator.py  options.py  registry.py  service_enabled.py  validators.py
prev/v0/atlas/providers/implementations/: mock.py  ollama.py  service_anthropic.py
prev/v0/atlas/providers/streaming/: buffer.py  control.py
prev/v0/atlas/schemas/: composite.py
prev/v0/atlas/schemas/definitions/: composite.py  services.py
prev/v0/atlas/scripts/: __init__.py
prev/v0/atlas/services/: buffer.py  resources.py  validation.py
prev/v0/atlas/tests/: README.md  conftest.py
prev/v0/atlas/tests/services/: test_buffer.py  test_events.py  test_middleware.py
prev/v0/atlas/tools/standard/: __init__.py
prev/v0/docs/: index.md
prev/v0/docs/project-management/legal/: compliance_roadmap.md
prev/v0/docs/project-management/planning/: feature_driven_architecture.md
prev/v0/docs/project-management/planning/archive/: accelerated_implementation_plan_2025-05-19.md  service_architecture_plan_2025-05-20.md
prev/v0/docs/project-management/roadmap/archive/: index.md
prev/v0/docs/v0/architecture/: module_interaction.md
prev/v0/docs/v0/components/agents/: specialized.md
prev/v0/docs/v0/components/core/: prompts.md
prev/v0/docs/v0/components/graph/: index.md
prev/v0/docs/v0/guides/: chromadb_usage.md
prev/v0/docs/v0/workflows/: multi_agent.md
prev/v0/docs/v1/: matrix_to_nerv.md
prev/v0/docs/v2/: atlas-ecosystem-research.md
prev/v0/docs/v2/inner-universe/: integration_guide.md  migration_guide.md  testing_strategy.md  types.md
prev/v0/docs/v2/nerv/patterns/: boundaries.md  effect_system.md  perspective_shifting.md
prev/v0/docs/v2/nerv/primitives/: factory.md
prev/v0/docs/v2/nerv/python/: nerv.py
quantum/: COMPRESSION_ENGINE.md  DEVELOPMENT_MVP.md  PARSER.md  README.md
scripts/: .env.local.example  .prettierignore  atlas.config.example.ts  docker-compose.yml  index.ts  package.json  test-bun-shim.ts  tsconfig.json  vitest.config.ts
src-markdown/: ATLAS-CLAUDINI-MQ.md  ATLAS_CODE_REVIEW.md  CLAUDE.md  CLAUDE_new.md  GEMINI-ATLAS.md
templates/: commit-style.md  project-roadmap.md  technical-document.md
v1/: architectural_documentation_meta.md
v2/: README.md
v3/: README.md
v4/: README.md  v5_PLAN.md
v5/: README.md  v5_COMPLETION.md
(+805 files in other folders)
