[project]
name = "atlas"
version = "0.1.0"
description = "Advanced Multi-Modal Learning & Guidance Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph==0.4.1",
    "chromadb>=1.0.7",
    "anthropic>=0.50.0",
    "pydantic>=2.11.4",
    "pathspec>=0.12.1",
    "python-dotenv>=1.1.0",
    "openai>=1.77.0",
    "ollama>=0.4.8",
]

[project.scripts]
atlas = "atlas.agent:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atlas"]
