[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.58.2",
    "google-genai>=1.26.0",
    "mem0ai>=0.1.114",
    "voyageai>=0.3.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-aio>=1.9.0",
    "ruff>=0.12.4",
]
